@@ -57,6 +57,11 @@ New in spot 2.10.4.dev  (net yet released)
   - purge_dead_states() will now also remove edges labeled by false
     (except self-loops).
 
+  Bugs fixed:
+
+  - reduce_parity() produced incorrect results when applied to
+    automata with deleted edges.
+
 New in spot 2.10.4  (2022-02-01)
 
   Bug fixed:
